--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -45,3 +45,16 @@
     background-color: #8a2b06;
     color: white;
 }
+
+@media (max-width: 768px) {
+    .total {
+        font-size: 0.5rem;
+        margin: 0.5rem 0;
+    }
+      
+    .actions button {
+        padding: 0.2rem 1rem;
+        border-radius: 25px;
+        margin-top: 0.1rem;
+    }
+}
