update the modal buttons sizes for being mobile-freindly

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -52,7 +52,7 @@
         margin: 0.5rem 0;
     }
       
-    .actions button {
+    button {
         padding: 0.2rem 1rem;
         border-radius: 25px;
         margin-top: 0.1rem;
