--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -29,7 +29,8 @@
 
 @media (max-width: 768px) {
     .modal {
-      width: 15rem;
+      top: 40hv;
+      width: 25rem;
       left: calc(50% - 7rem);
     }
 }
