--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -19,11 +19,17 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 130;
 }
+  
+@media (min-width: 768px) {
+    .modal {
+      width: 40rem;
+      left: calc(50% - 20rem);
+    }
+}
 
 @media (max-width: 768px) {
-    .modal {
-      top: 60hv;
-      width: 25rem;
-      left: calc(50% - 13rem);
-    }
+  .modal {
+    width: 25rem;
+    left: calc(50% - 13rem);
+  }
 }
