--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -46,7 +46,7 @@
     color: white;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 25rem) {
     .total {
         font-size: 0.5rem;
         margin: 0.5rem 0;
