--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -46,13 +46,16 @@
     color: white;
 }
 
-@media (max-width: 25rem) {
+@media (max-width: 768px) {
+    .cart-items {
+        max-height: 20rem;
+    }
     .total {
         font-size: 0.5rem;
         margin: 0.5rem 0;
     }
       
-    button {
+    .actions button {
         padding: 0.2rem 1rem;
         border-radius: 12px;
         margin-top: 0.1rem;
