--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -63,3 +63,37 @@
       flex-direction: row;
     }
 }
+
+@media (max-width: 768px) {
+    .cart-item {
+        border-bottom: 1px solid #8a2b06;
+        padding: 0.5rem 0;
+        margin: 0.5rem 0;
+    }
+      
+    .cart-item h2 {
+        margin: 0 0 0.2rem 0;
+        color: #363636;
+    }
+      
+    .summary {
+        width: 5rem;
+    }
+      
+    .amount {
+        border: 0.5px solid #ccc;
+        padding: 0.12rem 0.37rem;
+        border-radius: 3px;
+        color: #363636;
+    }
+      
+    .cart-item button {
+        font-size: 0.62rem;
+        color: #8a2b06;
+        border: 0.5px solid #8a2b06;
+        width: 1.5rem;
+        border-radius: 3px;
+        margin-left: 0.5rem;
+        margin: 0.12rem;
+    }
+}
