--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,30 +1,103 @@
+li {
+  animation: fadeInRight 0.5s ease-in-out forwards;
+  animation-delay: 0.35s;
+}
+
+li:nth-of-type(2) {
+  animation-delay: 0.55s;
+}
+    
+li:nth-of-type(3) {
+  animation-delay: 0.75s;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+}
+  
+a:hover {
+  color: #535bf2;
+}
+    
+a { 
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  overflow: hidden;
+  top: 5px;
+  cursor: pointer;
+}
+    
+a:hover:after,
+a:focus:after,
+a:active:after {
+  width: 100%;
+}
+            
+a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  transform: translateX(-50%);
+  height: 3px;
+  background: #fff;
+  transition: 0.35s;
+}
+
 footer {
-    width: 100%;
-    padding-bottom: 3%;
+  width: 100%;
+  padding-bottom: 3%;
 }
   
 .center {
-    text-align: center;
-    background-color: #8a2b06;
+  text-align: center;
+  background-color: #8a2b06;
 }
   
 .list {
-      display: inline-flex;
-      list-style: none;
+  display: inline-flex;
+  list-style: none;
 }
   
 .list-item {
-      position: relative;
-      width: 120px;
-      margin: 18px;
-      padding: 18px;
-      text-align: left;
+  position: relative;
+  width: 120px;
+  margin: 18px;
+  padding: 18px;
+  text-align: left;
 }
   
 .list-link {
-      text-decoration: none;
+  text-decoration: none;
 }
   
 .bg {
-    background-color: cornsilk;
+  background-color: cornsilk;
+}
+  
+@media screen and (max-height: 450px) {
+  a {font-size: 15px}
+}
+    
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  a:hover {
+    color: #747bff;
+  }
 }
