--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -217,6 +217,7 @@ a:after {
   
 @media (max-width: 768px) {
   .btn {display: flex; flex-direction: column; margin-right: 45px;}
+  .btn.active {display: flex;}
   .links {display: none;}
 }
   
