--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -166,6 +166,7 @@ a:after {
 }
 
 .btn {
+    display: none;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -217,7 +218,6 @@ a:after {
   
 @media (max-width: 768px) {
   .btn {display: flex; flex-direction: column; margin-right: 45px;}
-  .btn.active {display: flex;}
   .links {display: none;}
 }
   
