--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -166,7 +166,7 @@ a:after {
 }
 
 .btn {
-    display: none;
+  display: none;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -177,6 +177,8 @@ a:after {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
+.btn.active {display: flex;}
 
 .btn:hover {
   border-color: #646cff;
@@ -217,7 +219,7 @@ a:after {
 }
   
 @media (max-width: 768px) {
-  .btn {display: flex; flex-direction: column; margin-right: 45px;}
+  .btn {flex-direction: column; margin-right: 45px;}
   .links {display: none;}
 }
   
