--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -129,6 +129,10 @@ a:after {
   background-color: #fff;
 }
 
+.overlay {
+  visibility: hidden;
+}
+
 .overlay:before {
   content: '';
   background-color: #ff5252;
