--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -151,7 +151,9 @@ a:after {
   transition: all 0.35s ease;
 }
 
-.active {display: flex;}
+.overlay {
+  visibility: hidden;
+}
 
 .open {
   visibility: visible;
@@ -168,7 +170,6 @@ a:after {
 }
 
 .btn {
-  display: none;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -179,6 +180,8 @@ a:after {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
+.active {display: flex;}
 
 .btn:hover {
   border-color: #646cff;
