--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,100 @@ code {
     monospace;
 }
 
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+li {
+  animation: fadeInRight 0.5s ease-in-out forwards;
+  animation-delay: 0.35s;
+}
+  
+li:nth-of-type(2) {
+  animation-delay: 0.55s;
+}
+  
+li:nth-of-type(3) {
+  animation-delay: 0.75s;
+}
+  
+li:nth-of-type(4) {
+  animation-delay: 0.86s;
+}
+  
+li:nth-of-type(5) {
+  animation-delay: 1.15s;
+}
+  
+nav {
+  position: relative;
+  height: 70%;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 50px;
+  font-weight: 400;
+  text-align: center;
+  z-index: 100;
+}
+  
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+  height: 100%;
+}
+  
+ul li {
+  display: block;
+  height: 25%;
+  height: calc(100% / 4);
+  min-height: 50px;
+  position: relative;
+  opacity: 0;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+}
+
+a:hover {
+  color: #535bf2;
+}
+  
+a { 
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  overflow: hidden;
+  top: 5px;
+  cursor: pointer;
+}
+  
+a:hover:after,
+a:focus:after,
+a:active:after {
+  width: 100%;
+}
+          
+a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  transform: translateX(-50%);
+  height: 3px;
+  background: #fff;
+  transition: 0.35s;
+}
+
 .open {
   visibility: visible;
   height: '100%';
@@ -146,7 +240,30 @@ code {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  a:hover {
+    color: #747bff;
+  }
+}
+
 @media screen and (max-height: 450px) {
+  nav {overflow-y: auto; overflow-x: hidden;}
+  ul {
+    margin-top: 2rem;
+  }
+  a {font-size: 15px}
   .btn {
     margin-right: 20px;
     width: 15px;
