--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,15 @@
   max-width: 1280px;
 }
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -33,129 +42,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-li {
-  animation: fadeInRight 0.5s ease-in-out forwards;
-  animation-delay: 0.35s;
-}
-  
-li:nth-of-type(2) {
-  animation-delay: 0.55s;
-}
-  
-li:nth-of-type(3) {
-  animation-delay: 0.75s;
-}
-  
-li:nth-of-type(4) {
-  animation-delay: 0.86s;
-}
-  
-li:nth-of-type(5) {
-  animation-delay: 1.15s;
-}
-  
-nav {
-  position: relative;
-  height: 70%;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 50px;
-  font-weight: 400;
-  text-align: center;
-  z-index: 100;
-}
-  
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0 auto;
-  display: inline-block;
-  position: relative;
-  height: 100%;
-}
-  
-ul li {
-  display: block;
-  height: 25%;
-  height: calc(100% / 4);
-  min-height: 50px;
-  position: relative;
-  opacity: 0;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-}
-
-a:hover {
-  color: #535bf2;
-}
-  
-a { 
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  font-size: 20px;
-  color: #fff;
-  overflow: hidden;
-  top: 5px;
-  cursor: pointer;
-}
-  
-a:hover:after,
-a:focus:after,
-a:active:after {
-  width: 100%;
-}
-          
-a:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0%;
-  transform: translateX(-50%);
-  height: 3px;
-  background: #fff;
-  transition: 0.35s;
-}
-
-.open {
-  visibility: visible;
-  height: '100%';
-  opacity: 0.9;
-}
-
-.open:after{
-  right: 0;
-}
-
-.open:before{
-  left: 0;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 .btn span {
@@ -195,6 +81,86 @@ a:after {
   background-color: #fff;
 }
 
+li {
+  animation: fadeInRight 0.5s ease-in-out forwards;
+  animation-delay: 0.35s;
+}
+
+li:nth-of-type(2) {
+  animation-delay: 0.55s;
+}
+
+li:nth-of-type(3) {
+  animation-delay: 0.75s;
+}
+
+li:nth-of-type(4) {
+  animation-delay: 0.86s;
+}
+
+li:nth-of-type(5) {
+  animation-delay: 1.15s;
+}
+
+nav {
+  position: relative;
+  height: 70%;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 50px;
+  font-weight: 400;
+  text-align: center;
+  z-index: 100;
+}
+  
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+  height: 100%;
+}
+  
+ul li {
+  display: block;
+  height: 25%;
+  height: calc(100% / 4);
+  min-height: 50px;
+  position: relative;
+  opacity: 0;
+}
+
+a { 
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  overflow: hidden;
+  top: 5px;
+  cursor: pointer;
+}
+
+a:hover:after,
+a:focus:after,
+a:active:after {
+ width: 100%;
+}
+        
+a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  transform: translateX(-50%);
+  height: 3px;
+  background: #fff;
+  transition: 0.35s;
+}
+
 .overlay:before {
   content: '';
   background-color: #ff5252;
@@ -217,6 +183,25 @@ a:after {
   transition: all 0.35s ease;
 }
 
+.open {
+  visibility: visible;
+  height: 100%;
+  opacity: 0.9;
+}
+
+.open:after{
+  right: 0;
+}
+
+.open:before{
+  left: 0;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
 .btn {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -228,29 +213,47 @@ a:after {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-
 .btn:hover {
   border-color: #646cff;
 }
-
 .btn:focus,
 .btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
 
-@keyframes fadeInRight {
-  0% {
-    opacity: 0;
-    left: 20%;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  100% {
-    opacity: 1;
-    left: 0;
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
   }
 }
 
 @media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
   a:hover {
     color: #747bff;
   }
@@ -273,12 +276,23 @@ a:after {
     margin-bottom: 2px;
   }
 }
-  
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
 @media (max-width: 768px) {
-  .btn {display: flex;flex-direction: column; margin-right: 45px;}
+  .btn {display: flex; flex-direction: column; margin-right: 45px;}
   .links {display: none;}
 }
-  
+
 @media (max-width: 768px) {
   .links.active {
     display: flex;
@@ -286,34 +300,12 @@ a:after {
     height: 100%;
     opacity: 0.9;
   }
-    
+  
   .links.active:after{
     right: 0;
   }
-    
+  
   .links.active:before{
     left: 0;
-  }
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
   }
 }
