--- a/src/components/Products/ProductItem/ProductItem.module.css
+++ b/src/components/Products/ProductItem/ProductItem.module.css
@@ -1,16 +1,20 @@
 .product {
-    display: flex;
-    justify-content: space-between;
-    margin: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  margin: 0.7rem;
+  padding-bottom: 0.7rem;
+  border-bottom: 1px solid #ccc;
 }
-  
-.product h3 {
-    margin: 0 0 0.25rem 0;
+
+a:hover {
+    color: #333131;
+}
+h3 {
+  margin: 0 0 0.25rem 0;
 }
   
 .description {
+    color: #222222;
     font-style: italic;
 }
   
@@ -20,4 +24,3 @@
     color: #ad5502;
     font-size: 1.25rem;
 }
-
