--- a/src/components/Products/ProductItem/ProductItem.module.css
+++ b/src/components/Products/ProductItem/ProductItem.module.css
@@ -6,6 +6,10 @@
   border-bottom: 1px solid #ccc;
 }
 
+a {
+    color: #222222;
+}
+
 a:hover {
     color: #333131;
 }
@@ -14,7 +18,6 @@ h3 {
 }
   
 .description {
-    color: #222222;
     font-style: italic;
 }
   
