--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -1,3 +1,18 @@
+.product {
+  display: flex;
+  flex-direction: row;
+}
+
+.product-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+
+
+
+
 .container {
   padding: 0 2rem;
 }
