--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -1,14 +1,3 @@
-.h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-  
-.p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
 a {
   color: #222222;
 }
@@ -41,6 +30,15 @@ a:hover {
   line-height: 1.5;
   font-size: 1.5rem;
   font-style: italic;
+}
+
+.qty-price {
+  flex-direction: column;
+}
+
+.qty {
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .price {
