--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -41,21 +41,22 @@
     font: inherit;
     font-weight: bold;
     font-size: 1.25rem;
-    color: #8a2b06;
-    border: 1px solid #8a2b06;
-    width: 3rem;
+    border: none;
+    background-color: #312c1d;
+    color: #ffc404;
+    width: 1.5rem;
+    height: 1.5rem;
     text-align: center;
-    border-radius: 6px;
-    background-color: transparent;
+    border-radius: 50%;
     cursor: pointer;
     margin-left: 1rem;
     margin: 0.25rem;
 }
-  
+
 .cart-item button:hover,
 .cart-item button:active {
-    background-color: #8a2b06;
-    color: white;
+    background-color: #1d1a16;
+    color: #ffab04;
 }
 
 @media (min-width: 768px) {
@@ -89,11 +90,17 @@
       
     .cart-item button {
         font-size: 0.62rem;
-        color: #8a2b06;
-        border: 0.5px solid #8a2b06;
-        width: 1.5rem;
-        border-radius: 3px;
+        border: none;
+        background-color: #312c1d;
+        color: #ffc404;
+        width: 0.75rem;
+        height: 0.75rem;
+        border-radius: 50%;
         margin-left: 0.5rem;
         margin: 0.12rem;
+        font: inherit;
+        font-weight: bold;
+        text-align: center;
+        cursor: pointer;
     }
 }
