--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -45,6 +45,26 @@ a:hover {
   gap: 1rem;
 }
 
+.qnty button {
+  cursor: pointer;
+  font-size: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #312c1d;
+  color: #ffc404;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.qty button:hover,
+.qty button:active {
+  background-color: #1d1a16;
+  color: #ffab04;
+}
+
 .price {
   margin-top: 0.25rem;
   font-weight: bold;
