--- a/src/index.css
+++ b/src/index.css
@@ -194,8 +194,19 @@ a:after {
 }
 
 h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
   font-size: 3.2em;
+  margin: 0;
+  letter-spacing: 0.2rem;
   line-height: 1.1;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 2.7rem;
+  font-weight: bold;
+  margin: 0.75rem 0;
 }
 
 .btn {
