--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -42,8 +42,8 @@
     font-weight: bold;
     font-size: 1.25rem;
     border: none;
-    background-color: #312c1d;
-    color: #ffc404;
+    background-color: #8a2b06;
+    color: white;
     width: 3rem;
     height: 3rem;
     text-align: center;
@@ -55,6 +55,7 @@
 
 .actions button:hover,
 .actions button:active {
+    border: 1px solid #312c1d;
     background-color: transparent;
     color: #8a2b06;
 }
