--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -37,7 +37,7 @@
     flex-direction: column;
 }
   
-.cart-item button {
+.actions button {
     font: inherit;
     font-weight: bold;
     font-size: 1.25rem;
