--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -45,24 +45,30 @@ a:hover {
   gap: 1rem;
 }
 
-.qnty button {
-  cursor: pointer;
-  font-size: 1rem;
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: 50%;
+.minus,
+.plus {
+  font: inherit;
+  font-weight: bold;
+  font-size: 1.25rem;
   border: none;
-  background-color: #312c1d;
-  color: #ffc404;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #8a2b06;
+  color: white;
+  width: 3rem;
+  height: 3rem;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-left: 1rem;
+  margin: 0.25rem;
 }
 
-.qty button:hover,
-.qty button:active {
-  background-color: #1d1a16;
-  color: #ffab04;
+.minus:hover,
+.minus:active,
+.plus:hover,
+.plus:active {
+  border: 1px solid #312c1d;
+  background-color: transparent;
+  color: #8a2b06;
 }
 
 .price {
