--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -89,19 +89,11 @@
         color: #363636;
     }
       
-    .cart-item button {
+    .actions button {
         font-size: 0.62rem;
-        border: none;
-        background-color: #312c1d;
-        color: #ffc404;
         width: 0.75rem;
         height: 0.75rem;
-        border-radius: 50%;
         margin-left: 0.5rem;
         margin: 0.12rem;
-        font: inherit;
-        font-weight: bold;
-        text-align: center;
-        cursor: pointer;
     }
 }
