--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -88,3 +88,20 @@ a:hover {
   }
 }
 
+@media (max-width: 768px) {
+  .amount {
+      border: 0.5px solid #ccc;
+      padding: 0.12rem 0.37rem;
+      border-radius: 3px;
+      color: #363636;
+  }
+    
+  .minus,
+  .plus {
+      font-size: 0.62rem;
+      width: 0.75rem;
+      height: 0.75rem;
+      margin-left: 0.5rem;
+      margin: 0.12rem;
+  }
+}
