make action buttons responsive

--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -102,6 +102,7 @@ a:hover {
       width: 0.75rem;
       height: 0.75rem;
       margin-left: 0.5rem;
+      line-height: 1.2;
       margin: 0.12rem;
   }
 }
