--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -47,6 +47,7 @@
 }
 
 @media (max-width: 768px) {
+    .cart-items {display: flex;}
     .total {
         font-size: 0.5rem;
         margin: 0.5rem 0;
