--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -2,6 +2,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    min-height: 5rem;
     max-height: 12rem;
     overflow: auto;
     width: 100%;
@@ -47,7 +48,6 @@
 }
 
 @media (max-width: 768px) {
-    .cart-items {display: flex;}
     .total {
         font-size: 0.5rem;
         margin: 0.5rem 0;
