adjust some css

--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -91,9 +91,10 @@
       
     .actions button {
         font-size: 0.62rem;
-        width: 0.75rem;
-        height: 0.75rem;
+        width: 1.5rem;
+        height: 1.5rem;
         margin-left: 0.5rem;
+        line-height: 0.8;
         margin: 0.12rem;
     }
 }
