--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -2,7 +2,6 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    min-height: 12rem;
     max-height: 12rem;
     overflow: auto;
     width: 100%;
@@ -48,6 +47,10 @@
 }
 
 @media (max-width: 768px) {
+    .cart-items {
+        min-height: 8rem;
+        max-height: 8rem;
+    }
     .total {
         font-size: 0.5rem;
         margin: 0.5rem 0;
