--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -25,6 +25,7 @@
 }
   
 .amount {
+    font-size: 1rem;
     font-weight: bold;
     border: 1px solid #ccc;
     padding: 0.25rem 0.75rem;
@@ -79,10 +80,11 @@
     }
       
     .summary {
-        width: 7rem;
+        width: 10rem;
     }
       
     .amount {
+        font-size: 0.5rem;
         border: 0.5px solid #ccc;
         padding: 0.12rem 0.37rem;
         border-radius: 3px;
