--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -70,7 +70,7 @@
 @media (max-width: 768px) {
     .cart-item {
         border-bottom: 1px solid #8a2b06;
-        padding: 0.7rem 0;
+        padding: 0.9rem 0;
         margin: 0.7rem 0;
     }
       
@@ -80,7 +80,7 @@
     }
       
     .summary {
-        width: 10rem;
+        min-width: 7rem;
     }
       
     .amount {
