--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -68,7 +68,7 @@ a:hover {
   width: 3rem;
   height: 3rem;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 6px;
   cursor: pointer;
   margin-left: 1rem;
   margin: 0.25rem;
@@ -116,5 +116,6 @@ a:hover {
       margin-left: 0.5rem;
       line-height: 0.8;
       margin: 0.12rem;
+      border-radius: 3px;
   }
 }
