--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -1,11 +1,3 @@
-a {
-  color: #222222;
-}
-
-a:hover {
-  color: #333131;
-}
-
 .product {
   display: flex;
   flex: 1;
@@ -13,6 +5,14 @@ a:hover {
   justify-content: center;
   align-items: center;
   gap: 5rem;
+}
+
+.product a {
+  color: #222222;
+}
+
+.product a:hover {
+  color: #333131;
 }
 
 .img {
